--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ display:block
  justify-content:space-evenly;
   width: 100%;
   color: white;
-  margin-bottom: 0;
   text-decoration: none;
 }
 
@@ -19,8 +18,7 @@ display:block
 .Sidesection{
   background-color: rgba(14, 13, 15, 0.868);
   width: 15%;
-  height: 100vh;
-  
+  height: fit-content;
   border: 2px solid black
 }
 .Toolbar{
