--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 
 .App {
-width: 100%;
-display:block
+
+display:block;
+ height: 100vh; 
+
 
 }
 
@@ -12,13 +14,17 @@ display:block
   width: 100%;
   color: white;
   text-decoration: none;
+  
 }
 
 
 .Sidesection{
+  display: flex; 
+  flex-direction: column;
+  justify-content: space-between;
   background-color: rgba(14, 13, 15, 0.868);
   width: 15%;
-  height: fit-content;
+  height: 100vh;
   border: 2px solid black
 }
 .Toolbar{
@@ -32,12 +38,16 @@ a {
 }
 
 .figure{
-  width: 50%;
+  width: 100vh; 
   float:right;
   margin-right: 25%;
-  margin-top: 5%;
+  
   
 }
+.image{
+  border-radius: 5px;
+}
+
 
 
 
