--- a/src/VirtualTour.css
+++ b/src/VirtualTour.css
@@ -1,23 +1,76 @@
-
-.virtual-tour {
-    position:absolute;
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    padding: 20px;
-    background-color: rgb(231, 213, 213);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
+  .virtual-tour {
+      position: absolute;
+      margin-top: 10px;
+      background: white; 
+      border: 2px solid rgb(230, 225, 225); 
+      border-radius: 4px;
+      /* padding: 20px; */
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); 
+      transition: left 0.3s ease-in-out, top 0.3s ease-in-out;    
+    }
+    
   .highlighted {
-    border: 1px solid #080808fd;
-    background-color: transparent;
+    font-weight: 600;
+    border: 1px solid #0d0c0cfd;
+    background-color:#f5f5f5;
+    color: black;
     outline: none;
+    border-radius: 4px;
+    padding: 5px;
     transition: border-color 0.3s ease-in-out;
+    box-shadow: 0px 0px 10px rgba(0, 0, 50, 0.9); 
   }
- .tour-button{
-    margin-left:  50px;
+ .virtual-tour.closed {
+      display: none;
+}
+ .tour-content {
+      padding: 20px;
+      background-color: #f5f5f5; 
+      margin-bottom: 10px;
+}
+
+.highlighted-element-info {
+  text-align: center;
+  font-weight: 600;
+  background-color: #ffffff;
+  width: 100%;
+  /* border-radius: 4px; */
+  
+}
+
+.tour-navigation {
+   display: absolute;
+   text-align: center;
+   align-items: center;
+   justify-content:space-evenly;
    
- }
+}
+.tour-button {
+  margin: 10px 5px;
+  padding: 5px 10px;
+  background-color: rgba(115, 123, 123, 0.927);
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.blurred-overlay {
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.491); 
+  pointer-events: none; 
+  z-index: -9999;
+    
+}
+
+
+
+
+
+
+
+
+
