--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 
-.App {
+/* .App {
 
 display:block;
  height: 100vh; 
-
 
 }
 
@@ -45,9 +44,110 @@ display:block;
 }
 .image{
   border-radius: 5px;
+} */
+
+
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 
+
+
+.App {
+  
+  /* position: relative; */
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.Sidesection {
+  flex: 0 0 15%; 
+  background-color: rgb(1, 1, 1);
+  padding: 20px;
+  box-sizing: border-box;
+  overflow-y: auto; 
+  position: fixed;
+  top: 70px;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+
+.Sidesection a {
+  color: rgb(238, 238, 241);
+  text-decoration: none;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.Sidesection a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+
+.Content {
+  flex: 1;
+  padding: 20px;
+  margin-right: 15%; 
+  overflow-y: auto; 
+}
+
+
+.App-header {
+  background-color: #2f302f;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  padding: 10px 20px;
+  width: 100%;
+  color: rgb(42, 202, 27);
+  position: fixed;
+  top: 0;
+  
+}
+.App-header a{
+  text-decoration: none;
+  color: aliceblue;
+  
+}
+
+.FigureContainer {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items: flex-end; 
+  flex: 1;
+  padding: 20px;
+  overflow-y: auto; 
+
+}
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 5px;
+  margin-left: 190px;
+  margin-top: 70px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+
+figcaption {
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 4px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  margin-left: 180px;
+}
 
 
 
